[package]
name = "type-level-bf"
version = "0.1.0"
authors = ["Sheyne Anderson <sheyne@sheyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-typenum = ["typenum"]

[dependencies]
static_assertions = ""


typenum = {optional = true}